--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b6bcdfd0",
+   "id": "c3e35ecc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "52211bd5",
+   "id": "8fe21860",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5e9dff17",
+   "id": "f51e9c98",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a8d17be",
+   "id": "57a9a31d",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e2cf8b96",
+   "id": "7d2c4a78",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "778869fd",
+   "id": "fe3f085d",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "484112df",
+   "id": "92faba34",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "20ac25f1",
+   "id": "c7e12a72",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "bbabe5a7",
+   "id": "8565630c",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d7dc379b",
+   "id": "68f4ea03",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c3e7d2f3",
+   "id": "63ade6b2",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "09b93d7f",
+   "id": "ce1eea19",
    "metadata": {},
    "outputs": [
     {
@@ -1062,14 +1062,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69a3a14d",
+   "id": "8e56e0b5",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "157ab8f6",
+   "id": "8f0a4d67",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "92f28451",
+   "id": "68ebafc8",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e9dd8a46",
+   "id": "0ea31248",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "5ea7ea25",
+   "id": "f6530d6e",
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "cad22af9",
+   "id": "9278cf8e",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "e67631e7",
+   "id": "d08de19c",
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "826939cf",
+   "id": "d58ec8a9",
    "metadata": {},
    "outputs": [
     {
@@ -41772,7 +41772,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "91d40e9e",
+   "id": "093e5fd8",
    "metadata": {},
    "outputs": [
     {
@@ -41804,7 +41804,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "b3b1658f",
+   "id": "78ad3229",
    "metadata": {},
    "outputs": [
     {
@@ -41822,7 +41822,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "2452d827",
+   "id": "f1263fe5",
    "metadata": {},
    "outputs": [
     {
@@ -41846,7 +41846,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "dfd7a24d",
+   "id": "36e429f6",
    "metadata": {},
    "outputs": [
     {
@@ -41870,7 +41870,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f59dc53d",
+   "id": "38e7e4d5",
    "metadata": {},
    "outputs": [
     {
@@ -41950,7 +41950,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "b08317c2",
+   "id": "d4175661",
    "metadata": {},
    "outputs": [
     {
@@ -41986,7 +41986,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1bfc3cc6",
+   "id": "e957d39c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41997,7 +41997,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "8d440960",
+   "id": "dda867fc",
    "metadata": {},
    "outputs": [
     {
@@ -42018,7 +42018,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "c84623c6",
+   "id": "2d517044",
    "metadata": {},
    "outputs": [
     {
@@ -42209,7 +42209,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "c41058b8",
+   "id": "febdf0cb",
    "metadata": {},
    "outputs": [
     {
@@ -43232,7 +43232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "dac6ef67",
+   "id": "5697858b",
    "metadata": {},
    "outputs": [
     {
@@ -43265,7 +43265,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "1401ad07",
+   "id": "c879b069",
    "metadata": {},
    "outputs": [
     {
@@ -43283,7 +43283,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1f654b4b",
+   "id": "42b472da",
    "metadata": {},
    "outputs": [
     {
@@ -43425,7 +43425,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "95e805b5",
+   "id": "85e1c2f5",
    "metadata": {},
    "outputs": [
     {
@@ -43448,7 +43448,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "8db2795b",
+   "id": "3849489a",
    "metadata": {},
    "outputs": [
     {
@@ -43471,7 +43471,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "33b741b1",
+   "id": "3d7d6db8",
    "metadata": {},
    "outputs": [
     {
@@ -43494,7 +43494,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "09f14ab4",
+   "id": "4c9feb32",
    "metadata": {},
    "outputs": [
     {
@@ -43517,7 +43517,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "8cfa8c6b",
+   "id": "4b2363dd",
    "metadata": {},
    "outputs": [
     {
@@ -43540,7 +43540,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "02eb3459",
+   "id": "d83d609b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43551,7 +43551,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fd1f06c5",
+   "id": "98ab9b78",
    "metadata": {},
    "outputs": [
     {
@@ -43693,7 +43693,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "557efb65",
+   "id": "4fdd3e23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43704,7 +43704,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8ca1e95e",
+   "id": "9b519d88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43718,7 +43718,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "c6d146e5",
+   "id": "bdb01636",
    "metadata": {},
    "outputs": [
     {
@@ -43738,7 +43738,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "02861f4f",
+   "id": "d1526e6e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43752,7 +43752,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "76a9e10e",
+   "id": "4ab50a22",
    "metadata": {},
    "outputs": [
     {
@@ -43772,7 +43772,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d190b493",
+   "id": "76f22327",
    "metadata": {},
    "outputs": [
     {
@@ -43915,7 +43915,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "626ebab5",
+   "id": "3daa76fd",
    "metadata": {},
    "outputs": [
     {
@@ -43938,7 +43938,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "fdd161b8",
+   "id": "88d854b2",
    "metadata": {},
    "outputs": [
     {
@@ -43961,7 +43961,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9e870a5f",
+   "id": "5f0b7511",
    "metadata": {},
    "outputs": [
     {
@@ -44041,7 +44041,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "3a40b0c1",
+   "id": "760085fb",
    "metadata": {},
    "outputs": [
     {
@@ -44066,7 +44066,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b19e7edc",
+   "id": "f6114736",
    "metadata": {},
    "outputs": [
     {
@@ -44092,7 +44092,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "e12d526a",
+   "id": "99264fb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44111,7 +44111,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b89d85f2",
+   "id": "23e2d7db",
    "metadata": {},
    "outputs": [
     {
@@ -44181,7 +44181,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "50a844a0",
+   "id": "e6b3e705",
    "metadata": {},
    "outputs": [
     {
@@ -44256,7 +44256,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "936db161",
+   "id": "d10d7f0e",
    "metadata": {},
    "outputs": [
     {
@@ -44295,7 +44295,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0a490f4b",
+   "id": "4da17756",
    "metadata": {},
    "outputs": [
     {
@@ -44425,7 +44425,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "96ccf9c7",
+   "id": "138a74d2",
    "metadata": {},
    "outputs": [
     {
@@ -44463,7 +44463,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "92e65fc4",
+   "id": "1e099899",
    "metadata": {},
    "outputs": [
     {
@@ -44502,7 +44502,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "fdfc0ed0",
+   "id": "31d5b3cb",
    "metadata": {},
    "outputs": [
     {
@@ -44540,7 +44540,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "172db36d",
+   "id": "196ad10f",
    "metadata": {},
    "outputs": [
     {
@@ -44579,7 +44579,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "07e5ce9a",
+   "id": "d2744a7e",
    "metadata": {},
    "outputs": [
     {
@@ -44617,7 +44617,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "8c2a26a9",
+   "id": "d8c4a153",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44628,7 +44628,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "564f7933",
+   "id": "95630b1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44641,7 +44641,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "899359bd",
+   "id": "2ce81dc3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44654,7 +44654,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dcaf78fa",
+   "id": "515b262e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44667,7 +44667,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "bb879336",
+   "id": "8a03abd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44680,7 +44680,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "164ee157",
+   "id": "f75b61ec",
    "metadata": {},
    "outputs": [
     {
@@ -44823,7 +44823,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "ffc4c7c8",
+   "id": "d183ac2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44834,7 +44834,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "f94ff89c",
+   "id": "e4616e22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44845,7 +44845,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "5aa80db6",
+   "id": "9fbc8175",
    "metadata": {},
    "outputs": [
     {
@@ -44999,7 +44999,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "fcfcd979",
+   "id": "0ccf94f5",
    "metadata": {},
    "outputs": [
     {
@@ -45147,8 +45147,153 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 75,
+   "id": "de1df3c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>School Type</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total School Budget</th>\n",
+       "      <th>Per Student Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>% Passing Math</th>\n",
+       "      <th>% Passing Reading</th>\n",
+       "      <th>% Overall Passing</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1858</td>\n",
+       "      <td>$1,081,356.00</td>\n",
+       "      <td>$582.00</td>\n",
+       "      <td>83.061895</td>\n",
+       "      <td>83.975780</td>\n",
+       "      <td>94.133477</td>\n",
+       "      <td>97.039828</td>\n",
+       "      <td>91.334769</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Thomas High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1635</td>\n",
+       "      <td>$1,043,130.00</td>\n",
+       "      <td>$638.00</td>\n",
+       "      <td>83.418349</td>\n",
+       "      <td>83.848930</td>\n",
+       "      <td>93.272171</td>\n",
+       "      <td>97.308869</td>\n",
+       "      <td>90.948012</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>1468</td>\n",
+       "      <td>$917,500.00</td>\n",
+       "      <td>$625.00</td>\n",
+       "      <td>83.351499</td>\n",
+       "      <td>83.816757</td>\n",
+       "      <td>93.392371</td>\n",
+       "      <td>97.138965</td>\n",
+       "      <td>90.599455</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Wilson High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>2283</td>\n",
+       "      <td>$1,319,574.00</td>\n",
+       "      <td>$578.00</td>\n",
+       "      <td>83.274201</td>\n",
+       "      <td>83.989488</td>\n",
+       "      <td>93.867718</td>\n",
+       "      <td>96.539641</td>\n",
+       "      <td>90.582567</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Pena High School</th>\n",
+       "      <td>Charter</td>\n",
+       "      <td>962</td>\n",
+       "      <td>$585,858.00</td>\n",
+       "      <td>$609.00</td>\n",
+       "      <td>83.839917</td>\n",
+       "      <td>84.044699</td>\n",
+       "      <td>94.594595</td>\n",
+       "      <td>95.945946</td>\n",
+       "      <td>90.540541</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    School Type  Total Students Total School Budget  \\\n",
+       "Cabrera High School     Charter            1858       $1,081,356.00   \n",
+       "Thomas High School      Charter            1635       $1,043,130.00   \n",
+       "Griffin High School     Charter            1468         $917,500.00   \n",
+       "Wilson High School      Charter            2283       $1,319,574.00   \n",
+       "Pena High School        Charter             962         $585,858.00   \n",
+       "\n",
+       "                    Per Student Budget  Average Math Score  \\\n",
+       "Cabrera High School            $582.00           83.061895   \n",
+       "Thomas High School             $638.00           83.418349   \n",
+       "Griffin High School            $625.00           83.351499   \n",
+       "Wilson High School             $578.00           83.274201   \n",
+       "Pena High School               $609.00           83.839917   \n",
+       "\n",
+       "                     Average Reading Score  % Passing Math  % Passing Reading  \\\n",
+       "Cabrera High School              83.975780       94.133477          97.039828   \n",
+       "Thomas High School               83.848930       93.272171          97.308869   \n",
+       "Griffin High School              83.816757       93.392371          97.138965   \n",
+       "Wilson High School               83.989488       93.867718          96.539641   \n",
+       "Pena High School                 84.044699       94.594595          95.945946   \n",
+       "\n",
+       "                     % Overall Passing  \n",
+       "Cabrera High School          91.334769  \n",
+       "Thomas High School           90.948012  \n",
+       "Griffin High School          90.599455  \n",
+       "Wilson High School           90.582567  \n",
+       "Pena High School             90.540541  "
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sort and show top five schools.\n",
+    "top_schools = per_school_summary_df.sort_values([\"% Overall Passing\"], ascending=False)\n",
+    "\n",
+    "top_schools.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "366ae514",
+   "id": "a1e4b25d",
    "metadata": {},
    "outputs": [],
    "source": []
