adding avg math and reading scores

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8a4d6b7d",
+   "id": "09e07221",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dfc6cc4d",
+   "id": "bcb3f6e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2cb7f4d3",
+   "id": "a9ffabf7",
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "31def18c",
+   "id": "1c6cf5d5",
    "metadata": {},
    "outputs": [
     {
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "174fdf1e",
+   "id": "fa1cf6ec",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6bf9a472",
+   "id": "f6aedf82",
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "517be28c",
+   "id": "5a691400",
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +648,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c1efd395",
+   "id": "032d14cf",
    "metadata": {},
    "outputs": [
     {
@@ -840,7 +840,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f6d9e6fa",
+   "id": "f0406f19",
    "metadata": {},
    "outputs": [
     {
@@ -869,7 +869,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c61d7d9d",
+   "id": "0e1cbd0d",
    "metadata": {},
    "outputs": [
     {
@@ -896,7 +896,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "d68399f1",
+   "id": "1024377f",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6ac67980",
+   "id": "8d2fc4bb",
    "metadata": {},
    "outputs": [
     {
@@ -1062,14 +1062,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98d55874",
+   "id": "98958e3f",
    "metadata": {},
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "1669d11c",
+   "id": "52c4a6be",
    "metadata": {},
    "outputs": [
     {
@@ -1096,7 +1096,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "efee6bc2",
+   "id": "6332098e",
    "metadata": {},
    "outputs": [
     {
@@ -1123,7 +1123,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "42d1cb4e",
+   "id": "c79dbf21",
    "metadata": {},
    "outputs": [
     {
@@ -1150,7 +1150,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "cce26b64",
+   "id": "deb7b3d4",
    "metadata": {},
    "outputs": [
     {
@@ -1283,7 +1283,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4fc8c95e",
+   "id": "39ae04df",
    "metadata": {},
    "outputs": [
     {
@@ -1309,7 +1309,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b7843ba2",
+   "id": "0d0cb7c0",
    "metadata": {},
    "outputs": [
     {
@@ -2331,7 +2331,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "1bc2fa3a",
+   "id": "371507a0",
    "metadata": {},
    "outputs": [
     {
@@ -41772,7 +41772,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f606ea83",
+   "id": "69c83a3e",
    "metadata": {},
    "outputs": [
     {
@@ -41804,7 +41804,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "4ef9a2d1",
+   "id": "d0408ac9",
    "metadata": {},
    "outputs": [
     {
@@ -41822,7 +41822,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ead1b19c",
+   "id": "b6320dc0",
    "metadata": {},
    "outputs": [
     {
@@ -41846,7 +41846,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "d3e9c9a7",
+   "id": "fea47f29",
    "metadata": {},
    "outputs": [
     {
@@ -41870,7 +41870,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "97924426",
+   "id": "67742fae",
    "metadata": {},
    "outputs": [
     {
@@ -41950,7 +41950,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "64c4f0b4",
+   "id": "c85e8dbc",
    "metadata": {},
    "outputs": [
     {
@@ -41986,7 +41986,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "42cde414",
+   "id": "2a54c8f1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41997,7 +41997,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "32283eaf",
+   "id": "afc490cf",
    "metadata": {},
    "outputs": [
     {
@@ -42018,7 +42018,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "1495a942",
+   "id": "c6d44b2b",
    "metadata": {},
    "outputs": [
     {
@@ -42209,7 +42209,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "9cf94e16",
+   "id": "0f7deed8",
    "metadata": {},
    "outputs": [
     {
@@ -43232,7 +43232,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "471282b5",
+   "id": "83ac378d",
    "metadata": {},
    "outputs": [
     {
@@ -43265,7 +43265,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a2357d7f",
+   "id": "8daac7a0",
    "metadata": {},
    "outputs": [
     {
@@ -43283,7 +43283,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "df23171b",
+   "id": "87e210f4",
    "metadata": {},
    "outputs": [
     {
@@ -43425,7 +43425,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "55cd4966",
+   "id": "73bcf22b",
    "metadata": {},
    "outputs": [
     {
@@ -43448,7 +43448,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "0c72e2ac",
+   "id": "56927488",
    "metadata": {},
    "outputs": [
     {
@@ -43471,7 +43471,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "227782c8",
+   "id": "c7885e2d",
    "metadata": {},
    "outputs": [
     {
@@ -43494,7 +43494,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "f26dc6f6",
+   "id": "de0bf8d6",
    "metadata": {},
    "outputs": [
     {
@@ -43517,7 +43517,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "93c6da21",
+   "id": "4996deed",
    "metadata": {},
    "outputs": [
     {
@@ -43540,7 +43540,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "e9f31295",
+   "id": "f2b27eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43551,7 +43551,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "93b7f6a8",
+   "id": "5c6c337f",
    "metadata": {},
    "outputs": [
     {
@@ -43693,7 +43693,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "51aff156",
+   "id": "cb6c1a0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43704,7 +43704,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "51fd6726",
+   "id": "5e63478a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43718,7 +43718,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "0caf9bb5",
+   "id": "731e19ba",
    "metadata": {},
    "outputs": [
     {
@@ -43738,7 +43738,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "02176e44",
+   "id": "8b99dc42",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43752,7 +43752,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "5f361178",
+   "id": "078d1ae4",
    "metadata": {},
    "outputs": [
     {
@@ -43772,7 +43772,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "100eadce",
+   "id": "924f0d9c",
    "metadata": {},
    "outputs": [
     {
@@ -43915,7 +43915,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "24ec69a8",
+   "id": "6c2add95",
    "metadata": {},
    "outputs": [
     {
@@ -43938,7 +43938,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3372183b",
+   "id": "e19c13b6",
    "metadata": {},
    "outputs": [
     {
@@ -43961,7 +43961,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "879f5f5e",
+   "id": "a4d22e1e",
    "metadata": {},
    "outputs": [
     {
@@ -44041,7 +44041,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "057d1107",
+   "id": "e18c3056",
    "metadata": {},
    "outputs": [
     {
@@ -44066,7 +44066,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "b2a8ab35",
+   "id": "a00bd3bb",
    "metadata": {},
    "outputs": [
     {
@@ -44092,7 +44092,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "ca80e216",
+   "id": "64d9db6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44111,7 +44111,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b1636cd5",
+   "id": "e8a4ca4e",
    "metadata": {},
    "outputs": [
     {
@@ -44181,7 +44181,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "97d99ca8",
+   "id": "72177741",
    "metadata": {},
    "outputs": [
     {
@@ -44256,7 +44256,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "0b22b894",
+   "id": "e7b71c66",
    "metadata": {},
    "outputs": [
     {
@@ -44295,7 +44295,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "3601873a",
+   "id": "32d717e6",
    "metadata": {},
    "outputs": [
     {
@@ -44425,7 +44425,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "cebcef29",
+   "id": "7b537d25",
    "metadata": {},
    "outputs": [
     {
@@ -44463,7 +44463,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a68ceb44",
+   "id": "e11729f0",
    "metadata": {},
    "outputs": [
     {
@@ -44502,7 +44502,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "7e5064b2",
+   "id": "6fc0a84e",
    "metadata": {},
    "outputs": [
     {
@@ -44540,7 +44540,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "80a84789",
+   "id": "84cc0d69",
    "metadata": {},
    "outputs": [
     {
@@ -44579,7 +44579,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "67ddefce",
+   "id": "dca39087",
    "metadata": {},
    "outputs": [
     {
@@ -44617,7 +44617,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "b2995762",
+   "id": "7cdadda5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44628,7 +44628,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "1c519aba",
+   "id": "4301ab3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44641,7 +44641,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d06a77f7",
+   "id": "633ea793",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44654,7 +44654,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "cf04cdf6",
+   "id": "a4189c5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44667,7 +44667,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "31b120aa",
+   "id": "f1a08d70",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44680,7 +44680,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5499768b",
+   "id": "da86766d",
    "metadata": {},
    "outputs": [
     {
@@ -44823,7 +44823,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "fc695b5c",
+   "id": "f9ad3338",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44834,7 +44834,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "d961c91f",
+   "id": "c669de11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44845,7 +44845,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "567776a7",
+   "id": "b3730b31",
    "metadata": {},
    "outputs": [
     {
@@ -44999,7 +44999,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "690a0fb8",
+   "id": "a71d84f1",
    "metadata": {},
    "outputs": [
     {
@@ -45148,7 +45148,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "2b191729",
+   "id": "92124903",
    "metadata": {},
    "outputs": [
     {
@@ -45293,7 +45293,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "f1a56f05",
+   "id": "eefeb6e7",
    "metadata": {},
    "outputs": [
     {
@@ -45438,7 +45438,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "bb5ffd79",
+   "id": "a336343c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45455,7 +45455,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "23dddd61",
+   "id": "417fd4b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45472,7 +45472,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "551af283",
+   "id": "ba903809",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45489,7 +45489,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "7b3d60b9",
+   "id": "b8da0815",
    "metadata": {},
    "outputs": [
     {
@@ -45595,7 +45595,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "e01afdc1",
+   "id": "c11152f4",
    "metadata": {},
    "outputs": [
     {
@@ -45701,7 +45701,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "84851eab",
+   "id": "7579c614",
    "metadata": {},
    "outputs": [
     {
@@ -45807,8 +45807,115 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 83,
+   "id": "20d725b1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>9th</th>\n",
+       "      <th>10th</th>\n",
+       "      <th>11th</th>\n",
+       "      <th>12th</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Bailey High School</th>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "      <td>80.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cabrera High School</th>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>84.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Figueroa High School</th>\n",
+       "      <td>81.2</td>\n",
+       "      <td>81.4</td>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford High School</th>\n",
+       "      <td>80.6</td>\n",
+       "      <td>81.3</td>\n",
+       "      <td>80.4</td>\n",
+       "      <td>80.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Griffin High School</th>\n",
+       "      <td>83.4</td>\n",
+       "      <td>83.7</td>\n",
+       "      <td>84.3</td>\n",
+       "      <td>84.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       9th  10th  11th  12th\n",
+       "Bailey High School    81.3  80.9  80.9  80.9\n",
+       "Cabrera High School   83.7  84.3  83.8  84.3\n",
+       "Figueroa High School  81.2  81.4  80.6  81.4\n",
+       "Ford High School      80.6  81.3  80.4  80.7\n",
+       "Griffin High School   83.4  83.7  84.3  84.0"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "  # Format each grade column.\n",
+    "  reading_scores_by_grade[\"9th\"] = reading_scores_by_grade[\"9th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  reading_scores_by_grade[\"10th\"] = reading_scores_by_grade[\"10th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  reading_scores_by_grade[\"11th\"] = reading_scores_by_grade[\"11th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  reading_scores_by_grade[\"12th\"] = reading_scores_by_grade[\"12th\"].map(\"{:,.1f}\".format)\n",
+    "\n",
+    "  # Make sure the columns are in the correct order.\n",
+    "  reading_scores_by_grade = reading_scores_by_grade[\n",
+    "                 [\"9th\", \"10th\", \"11th\", \"12th\"]]\n",
+    "\n",
+    "  # Remove the index name.\n",
+    "  reading_scores_by_grade.index.name = None\n",
+    "  # Display the data frame.\n",
+    "  reading_scores_by_grade.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "370eadcc",
+   "id": "a0eb676a",
    "metadata": {},
    "outputs": [],
    "source": []
